Add FeatureAvatar to Account factory

Logviewer now correctly displays account avatars for all
accounts.

BUG: 310981
FIXED-IN: 0.5.3